--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -12,7 +12,7 @@
         <span class="app-header__team-name">
           <a href="#" class="govuk-header__link govuk-header__link--homepage app-govuk-header__link--homepage app-govuk-header__link--homepage--bold">
             <span class="govuk-header__logotype-text">
-            Digital Land
+            Team name?
             </span>
           </a>
         </span>
