--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -43,22 +43,44 @@
         </div>
       </section>
     </div>
+    <div class="govuk-grid-column-one-third">
+
+      <div class="app-related-items" role="complementary">
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-0" id="view-the-data">
+          Linked data
+        </h2>
+        <p class="govuk-hint govuk-!-font-size-14">You can view and add linked data to this plan</p>
+        <nav role="navigation" aria-labelledby="view-the-data">
+          <ul class="govuk-list govuk-!-font-size-16">
+            <li>
+              <a class="govuk-link" href="#timetable">Timetable events</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="#documents">Associated documents</a>
+            </li>
+          </ul>
+        </nav>
+
+      </div>
+
+    </div>
   </div>
 
-    <h2 class="govuk-heading-m">Timetable</h2>
-    <ul class="govuk-list--bullet">
-      {% for stage in development_plan.timetable %}
-        <li>{{ stage.reference }}: {{ stage.development_plan_event.name }}, {{ stage.event_date }}</li>
-      {% endfor %}
-    </ul>
-    <a href="#" class="govuk-button govuk-button--secondary">+ add event to timetable</a>
-    <h2 class="govuk-heading-m">Documents</h2>
-    <ul class="govuk-list--bullet">
-      {% for document in development_plan.documents %}
-        <li>{{ document.reference }}: {{ document.name }}, {{ document.documentation_url }}</li>
-      {% endfor %}
-    </ul>
-    <a href="#" class="govuk-button govuk-button--secondary">+ add supporting document</a>
-  </section>
-</main>
+  <h2 id="timetable" class="govuk-heading-m">Timetable</h2>
+  <p class="govuk-body">Record any events that happen during the plan-making process. Events can have already happened or happen on a future date.</p>
+  <ul class="govuk-list govuk-list--bullet">
+    {% for stage in development_plan.timetable %}
+      <li>{{ stage.reference }}: {{ stage.development_plan_event.name }}, {{ stage.event_date }}</li>
+    {% endfor %}
+  </ul>
+  <a href="#" class="govuk-button govuk-button--secondary">+ add event to timetable</a>
+  <h2 id="documents" class="govuk-heading-m">Documents</h2>
+  <p class="govuk-body">Record any associated documents. These can be documents that contain relevant policies, documents outlining activities or publication notices.</p>
+  <ul class="govuk-list govuk-list--bullet">
+    {% for document in development_plan.documents %}
+      <li><a href="{{ document.documentation_url }}" class="govuk-link">{{ document.name }}</a> <span class="govuk-hint">({{ document.reference }})</span></li>
+    {% endfor %}
+  </ul>
+  <a href="#" class="govuk-button govuk-button--secondary">+ add supporting document</a>
+
 {% endblock content %}
