--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -13,6 +13,8 @@
     </ul>
 
     <a href="{{ url_for('development_plan.new') }}" class="govuk-button govuk-button--secondary">+ add new plan record</a>
+    <p class="govuk-body">or</p>
+    <a href="{{ url_for('organisation.organisations') }}" class="govuk-link">Find an organisation</a>
   </div>
 </div>
 {% endblock content %}
