--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -9,15 +9,9 @@
 {% block mastHead %}
 <header class="govuk-header {{ app_header_classes }}" role="banner" data-module="govuk-header">
   <div class="govuk-header__container govuk-width-container app-govuk-header__container">
-    <div class="app-header__content">
-        <span class="app-header__team-name">
-          <a href="#" class="govuk-header__link govuk-header__link--homepage app-govuk-header__link--homepage app-govuk-header__link--homepage--bold">
-            <span class="govuk-header__logotype-text">
-            Team name?
-            </span>
-          </a>
-        </span>
-        <a href="/" class="govuk-header__link govuk-header__link--homepage">
+    <div class="header-proposition">
+        <a href="/" class="govuk-header__link govuk-header__link--service-name">
+          Data Standards
           <span class="govuk-header__product-name">
             Development plan timetable
           </span>
@@ -25,7 +19,6 @@
         <strong class="govuk-tag govuk-phase-banner__content__tag app-header__tag">
           prototype
         </strong>
-      </a>
     </div>
   </div>
 </header>
