--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -80,7 +80,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 id="timetable" class="govuk-heading-m govuk-!-margin-top-9">Timetable</h2>
-      <p class="govuk-body">The timetable data is a collection of events that happen during the plan making process. Events in the timetable migth already have happened or might happen on a future data.</p>
+      <p class="govuk-body">The timetable is a collection of events that happen during the plan making process. Events in the timetable might already have happened or might happen on a future date.</p>
     </div>
   </div>
 
@@ -105,7 +105,7 @@
         <td class="govuk-table__cell app-cell--meta">{{ evt.end_date if evt.end_date }}</td>
         <td class="govuk-table__cell app-cell--meta app-cell--actions">
           <ul class="govuk-list govuk-!-margin-bottom-0 govuk-!-font-size-16">
-            <li><a href="#" class="govuk-link">Edit</a></li>
+            <li><a href="{{ url_for('development_plan.edit_event', reference=development_plan.reference, event_reference=evt.reference) }}" class="govuk-link">Edit</a></li>
             <li><a href="#" class="govuk-link app-link--destructive">Delete</a></li>
           </ul>
         </td>
