--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -17,4 +17,13 @@
     <a href="{{ url_for('organisation.organisations') }}" class="govuk-link">Find an organisation</a>
   </div>
 </div>
+
+<hr class="govuk-section-break--l">
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-three-quarters">
+    <h2 class="govuk-heading-m">Admin</h2>
+    <p class="govuk-body"><a href="{{ url_for('admin.index') }}" class="govuk-link">Manage the supporting data registers</a>.</p>
+  </div>
+</div>
 {% endblock content %}
