--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -3,6 +3,7 @@
 
 // app specific component scss
 @import "components/summary-card";
+@import "components/register-table";
 
 // Typography tweaks
 
