--- a/application/templates/admin/plan-types.html
+++ b/application/templates/admin/plan-types.html
@@ -45,4 +45,5 @@
         {% endfor %}
       </tbody>
     </table>
+    <a href="{{ url_for('admin.add_plan_type') }}" class="app-register__add-row govuk-!-margin-top-1"><i class="fa fa-plus">+</i>Add Row</a>
 {% endblock content %}
