--- a/src/scss/components/_register-table.scss
+++ b/src/scss/components/_register-table.scss
@@ -13,3 +13,37 @@
     text-align: center;
   }
 }
+
+.app-register__add-row {
+  @include govuk-font(16);
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.25;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-color: govuk-colour('light-grey');
+  color: govuk-colour('black');
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: .5rem 1rem;
+  border-radius: .25rem;
+  text-decoration: none;
+  -webkit-transition: all .1s ease-in-out;
+  -o-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
+
+  &:hover {
+    cursor: pointer;
+    background-color: darken(govuk-colour('light-grey'), 5);
+  }
+
+  i {
+    margin-right: 5px;
+    font-style: normal;
+    font-weight: 900;
+  }
+}
