--- a/application/templates/admin/events.html
+++ b/application/templates/admin/events.html
@@ -47,3 +47,24 @@
     </table>
     <a href="{{ url_for('admin.add_event') }}" class="app-register__add-row govuk-!-margin-top-1"><i class="fa fa-plus">+</i>Add Row</a>
 {% endblock content %}
+
+{% block pageScripts %}
+  <script>
+    function testPost(data) {
+      fetch("/admin/events/add-ajax", {
+        method: 'POST',
+        body: JSON.stringify(data),
+        headers:{
+          'Content-Type': 'application/json'
+        }
+      })
+      .then(response => response.json())
+      .then(data => {
+        console.log('Success:', data);
+      })
+      .catch((error) => {
+        console.error('Error:', error);
+      });
+    }
+  </script>
+{% endblock pageScripts %}
