--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -4,6 +4,7 @@
 // app specific component scss
 @import "components/summary-card";
 @import "components/register-table";
+@import "components/new-register-record";
 
 // Typography tweaks
 
