--- a/application/templates/plan/add-event.html
+++ b/application/templates/plan/add-event.html
@@ -9,9 +9,17 @@
   <div class="govuk-grid-column-two-thirds">
     <form class="govuk-form" method="POST">
       {{ form.csrf_token }}
+
+      <div data-module="select-or-new">
+        <div class="govuk-form-group">
+          {{ form.development_plan_event.label(class='govuk-label') }}
+          {{ form.development_plan_event(class='govuk-select') }}
+        </div>
+      </div>
+
       {% for field in form %}
-      {%- if field.name not in ['event_date_year', 'event_date_month', 'event_date_day', 'notes'] %}
-      <div class="govuk-form-group">
+      {%- if field.name not in ['event_date_year', 'event_date_month', 'event_date_day', 'notes', 'development_plan_event'] %}
+      <div class="govuk-form-group" {% if field.name == 'development_plan_event' %}data-module="flexible-select"{% endif %}>
         {{ field.label(class='govuk-label') }}
         {% if field.type == "TextAreaField" %}
         {{ field(class='govuk-textarea') }}
@@ -80,14 +88,112 @@
   </div>
 </div>
 
+<template id="action-panel-template">
+  <div class="new-record app-action-panel">
+    <div data-new-record="request">
+      <p class="govuk-body"><span data-new-record="name">Test test</span> isn't in the current list of events. Do you want to add it?</p>
+      <button>Yes, add it</button>
+    </div>
+    <div data-new-record="result">
+      <p class="govuk-body"><span data-new-record="name">Test test</span> has been added to the event register.</p>
+    </div>
+  </div>
+</template>
+
 {% endblock %}
 
 {% block pageScripts -%}
   <script>
-    accessibleAutocomplete.enhanceSelectElement({
-      selectElement: document.querySelector('#development_plan_event'),
-      showNoOptionsFound: false
-    })
-  </script>
+    const $flexibleSelect = document.querySelector('[data-module="flexible-select"]')
+    const $selectElement = document.querySelector('#development_plan_event')
+    const $autocompleteContainer = document.querySelector('#my-autocomplete-container')
 
+    const $selectContainer = document.querySelector('[data-module="select-or-new"]')
+    const selectModule = new dptp.SelectOrNew($selectContainer, 'development_plan_event', "action-panel-template").init()
+
+    function getOptionList($select) {
+      const $options = $select.querySelectorAll('option')
+      return Array.from($options).map(($option) => $option.textContent)
+    }
+
+    function testAlternativeApproach() {
+      console.log("in here")
+      //$flexibleSelect.classList.add('govuk-visually-hidden')
+
+      // we should add the container first
+      accessibleAutocomplete({
+        element: document.querySelector('#my-autocomplete-container'),
+        id: 'development_plan_event', // To match it to the existing <label>.
+        source: getOptionList($selectElement),
+        showNoOptionsFound: false,
+        onConfirm: autoCompleteOnConfirm
+      })
+    }
+    // testAlternativeApproach()
+
+    const $newEventTemplate = document.getElementById('new-event-template')
+    let $newEventFrag
+    // the element once added to the page
+    let $newEvent
+
+    function createOption (name, val) {
+      // Create a new option element
+      const newOption = document.createElement('option');
+      newOption.value = val;
+      newOption.textContent = name;
+      return newOption
+    }
+
+    function addNewOption($select, name, val) {
+      $select.append(createOption(name, val))
+      // Select the new option
+      $select.value = val
+    }
+
+    function onConfirmNewRecordRequest(e) {
+      e.preventDefault()
+      console.log('ajax request to create new event', e)
+      console.log($newEvent.classList)
+      $newEvent.classList.add("new-event__mode--result")
+      $newEvent.classList.remove("new-event__mode--request")
+      postNewEvent()
+    }
+
+    function onReenterInput(e) {
+      $newEvent.remove()
+    }
+
+    function showRequestElement(evtName, $sibling) {
+      const $nameEls = $newEventFrag.querySelectorAll('[data-new-event="event-name"]')
+      $nameEls.forEach(($el) => $el.textContent = evtName)
+
+      const $confirmBtn = $newEventFrag.querySelector('[data-new-event="request"] button')
+      $confirmBtn.addEventListener('click', onConfirmNewRecordRequest)
+      // $sibling.insertAdjacentElement("afterend", $newEvent)
+      $sibling.appendChild($newEventFrag)
+      $newEvent = $sibling.querySelector(".new-event")
+    }
+
+    function autoCompleteOnConfirm (e) {
+      console.log("access-autocom", this)
+      $newEventFrag = $newEventTemplate.content.cloneNode(true)
+      //const $group = this.selectElement.closest('.govuk-form-group')
+      const $input = $autocompleteContainer.querySelector('.autocomplete__wrapper input')
+      console.log($input.value)
+      showRequestElement($input.value, $autocompleteContainer)
+      $input.addEventListener('focus', onReenterInput)
+    }
+
+    // for progressively enhancing a select - not what we are doing anymore
+    // function setUpAutocomplete() {
+    //   const aa = accessibleAutocomplete.enhanceSelectElement({
+    //     selectElement: $selectElement,
+    //     showNoOptionsFound: false,
+    //     onConfirm: autoCompleteOnConfirm
+    //   })
+    //   console.log(aa)
+    // }
+    //setUpAutocomplete()
+
+  </script>
 {%- endblock %}
