--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -105,7 +105,7 @@
         <td class="govuk-table__cell app-cell--meta">{{ evt.end_date if evt.end_date }}</td>
         <td class="govuk-table__cell app-cell--meta app-cell--actions">
           <ul class="govuk-list govuk-!-margin-bottom-0 govuk-!-font-size-16">
-            <li><a href="{{ url_for('development_plan.edit_event', reference=development_plan.reference, event_reference=evt.reference) }}" class="govuk-link">Edit</a></li>
+            <li><a href="#" class="govuk-link">Edit</a></li>
             <li><a href="{{ url_for('development_plan.delete_event', reference=development_plan.reference, event_reference=evt.reference) }}" class="govuk-link app-link--destructive">End record</a></li>
           </ul>
         </td>
