--- a/application/templates/plan/add-document.html
+++ b/application/templates/plan/add-document.html
@@ -41,5 +41,8 @@
     accessibleAutocomplete.enhanceSelectElement({
       selectElement: document.querySelector('#document_type')
     })
+    accessibleAutocomplete.enhanceSelectElement({
+      selectElement: document.querySelector('#organisations')
+    })
   </script>
 {% endblock pageScripts %}
