--- a/application/templates/plan/edit.html
+++ b/application/templates/plan/edit.html
@@ -19,6 +19,21 @@
 
       {% for field in form %}
       {%- if field.name not in ['reference'] %}
+        {%- if field.name == 'organisations' %}
+          <div class="app-organisation-select" data-module="multi-select">
+            <div class="govuk-form-group" data-mulit-select="form-group">
+              {{ field.label(class='govuk-label') }}
+              {{ field(class='govuk-input') }}
+            </div>
+            <div class="app-hidden">
+              <select name="organisation_select" id="organisation_select" data-mulit-select="select">
+                {% for organisation in field.choices %}
+                <option value="{{ organisation[0] }}">{{ organisation[1] }}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+        {% else %}
         <div class="govuk-form-group">
           {{ field.label(class='govuk-label') }}
           {% if field.type == "TextAreaField" %}
@@ -34,6 +49,7 @@
               </ul>
           {% endif %}
         </div>
+        {% endif %}
       {% endif -%}
       {% endfor %}
       <div class="govuk-button-group">
@@ -45,3 +61,10 @@
 </div>
 
 {% endblock %}
+
+{% block pageScripts %}
+  <script>
+    const $mulitSelectModule = document.querySelector('[data-module="multi-select"]')
+    const mulitSelectModule = new dptp.MultiSelect($mulitSelectModule).init()
+  </script>
+{% endblock pageScripts %}
