--- a/application/templates/plan/new.html
+++ b/application/templates/plan/new.html
@@ -10,26 +10,42 @@
     <form class="govuk-form" method="POST">
       {{ form.csrf_token }}
       {% for field in form %}
-      <div class="govuk-form-group">
-        {{ field.label(class='govuk-label') }}
-        {% if field.description %}
-          <div class="govuk-hint">{{ field.description }}</div>
-        {% endif %}
-        {% set extra_classes = " govuk-input--width-4" if "date" in field.name else "" %}
-        {% if field.type == "TextAreaField" %}
-        {{ field(class='govuk-textarea') }}
+        {%- if field.name == 'organisations' %}
+          <div class="app-organisation-select" data-module="multi-select">
+            <div class="govuk-form-group" data-mulit-select="form-group">
+              {{ field.label(class='govuk-label') }}
+              {{ field(class='govuk-input') }}
+            </div>
+            <div class="app-hidden">
+              <select name="organisation_select" id="organisation_select" data-mulit-select="select">
+                {% for organisation in field.choices %}
+                <option value="{{ organisation[0] }}">{{ organisation[1] }}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
         {% else %}
-        {% set classes = 'govuk-input' + extra_classes %}
-        {{ field(class=classes) }}
-        {% endif %}
-        {% if field.errors %}
-            <ul>
-            {% for error in field.errors %}
-                <li>{{ error }}</li>
-            {% endfor %}
-            </ul>
-        {% endif %}
-      </div>
+        <div class="govuk-form-group">
+          {{ field.label(class='govuk-label') }}
+          {% if field.description %}
+            <div class="govuk-hint">{{ field.description }}</div>
+          {% endif %}
+          {% set extra_classes = " govuk-input--width-4" if "date" in field.name else "" %}
+          {% if field.type == "TextAreaField" %}
+          {{ field(class='govuk-textarea') }}
+          {% else %}
+          {% set classes = 'govuk-input' + extra_classes %}
+          {{ field(class=classes) }}
+          {% endif %}
+          {% if field.errors %}
+              <ul>
+              {% for error in field.errors %}
+                  <li>{{ error }}</li>
+              {% endfor %}
+              </ul>
+          {% endif %}
+        </div>
+        {% endif -%}{# end of if organisation #}
       {% endfor %}
       <div class="govuk-button-group">
         <button class="govuk-button" type="submit">Create record</button>
@@ -40,3 +56,13 @@
 </div>
 
 {% endblock %}
+
+{% block pageScripts %}
+  <script>
+    const $mulitSelectModule = document.querySelector('[data-module="multi-select"]')
+    const mulitSelectModule = new dptp.MultiSelect($mulitSelectModule).init()
+    // accessibleAutocomplete.enhanceSelectElement({
+    //   selectElement: document.querySelector('#organisations')
+    // })
+  </script>
+{% endblock pageScripts %}
