--- a/application/templates/plan/add-event.html
+++ b/application/templates/plan/add-event.html
@@ -19,23 +19,39 @@
 
       {% for field in form %}
       {%- if field.name not in ['event_date_year', 'event_date_month', 'event_date_day', 'notes', 'development_plan_event'] %}
-      <div class="govuk-form-group" {% if field.name == 'development_plan_event' %}data-module="flexible-select"{% endif %}>
-        {{ field.label(class='govuk-label') }}
-        {% if field.type == "TextAreaField" %}
-        {{ field(class='govuk-textarea') }}
-        {% elif field.type == "SelectField" %}
-        {{ field(class='govuk-select') }}
+        {%- if field.name == 'organisations' %}
+        <div class="app-organisation-select" data-module="multi-select">
+          <div class="govuk-form-group" data-mulit-select="form-group">
+            {{ field.label(class='govuk-label') }}
+            {{ field(class='govuk-input') }}
+          </div>
+          <div class="app-hidden">
+            <select name="organisation_select" id="organisation_select" data-mulit-select="select">
+              {% for organisation in field.choices %}
+              <option value="{{ organisation[0] }}">{{ organisation[1] }}</option>
+              {% endfor %}
+            </select>
+          </div>
+        </div>
         {% else %}
-        {{ field(class='govuk-input') }}
+        <div class="govuk-form-group" {% if field.name == 'development_plan_event' %}data-module="flexible-select"{% endif %}>
+          {{ field.label(class='govuk-label') }}
+          {% if field.type == "TextAreaField" %}
+          {{ field(class='govuk-textarea') }}
+          {% elif field.type == "SelectField" %}
+          {{ field(class='govuk-select') }}
+          {% else %}
+          {{ field(class='govuk-input') }}
+          {% endif %}
+          {% if field.errors %}
+              <ul>
+              {% for error in field.errors %}
+                  <li>{{ error }}</li>
+              {% endfor %}
+              </ul>
+          {% endif %}
+        </div>
         {% endif %}
-        {% if field.errors %}
-            <ul>
-            {% for error in field.errors %}
-                <li>{{ error }}</li>
-            {% endfor %}
-            </ul>
-        {% endif %}
-      </div>
       {% endif %}
 
       {% endfor %}
@@ -107,8 +123,7 @@
     const $selectContainer = document.querySelector('[data-module="select-or-new"]')
     const selectModule = new dptp.SelectOrNew($selectContainer, 'development_plan_event', "action-panel-template").init()
 
-    accessibleAutocomplete.enhanceSelectElement({
-      selectElement: document.querySelector('#organisations')
-    })
+    const $mulitSelectModule = document.querySelector('[data-module="multi-select"]')
+    const mulitSelectModule = new dptp.MultiSelect($mulitSelectModule).init()
   </script>
 {%- endblock %}
