--- a/application/templates/plan/add-document.html
+++ b/application/templates/plan/add-document.html
@@ -10,21 +10,37 @@
     <form class="govuk-form" method="POST">
       {{ form.csrf_token }}
       {% for field in form %}
-      <div class="govuk-form-group">
-        {{ field.label(class='govuk-label') }}
-        {% if field.type == "TextAreaField" %}
-        {{ field(class='govuk-textarea') }}
+      {%- if field.name == 'organisations' %}
+        <div class="app-organisation-select" data-module="multi-select">
+          <div class="govuk-form-group" data-mulit-select="form-group">
+            {{ field.label(class='govuk-label') }}
+            {{ field(class='govuk-input') }}
+          </div>
+          <div class="app-hidden">
+            <select name="organisation_select" id="organisation_select" data-mulit-select="select">
+              {% for organisation in field.choices %}
+              <option value="{{ organisation[0] }}">{{ organisation[1] }}</option>
+              {% endfor %}
+            </select>
+          </div>
+        </div>
         {% else %}
-        {{ field(class='govuk-input') }}
+        <div class="govuk-form-group">
+          {{ field.label(class='govuk-label') }}
+          {% if field.type == "TextAreaField" %}
+          {{ field(class='govuk-textarea') }}
+          {% else %}
+          {{ field(class='govuk-input') }}
+          {% endif %}
+          {% if field.errors %}
+              <ul>
+              {% for error in field.errors %}
+                  <li>{{ error }}</li>
+              {% endfor %}
+              </ul>
+          {% endif %}
+        </div>
         {% endif %}
-        {% if field.errors %}
-            <ul>
-            {% for error in field.errors %}
-                <li>{{ error }}</li>
-            {% endfor %}
-            </ul>
-        {% endif %}
-      </div>
       {% endfor %}
       <div class="govuk-button-group">
         <button class="govuk-button" type="submit">Create record</button>
@@ -38,11 +54,13 @@
 
 {% block pageScripts %}
   <script>
+    // use accessible autocomplete for document type
     accessibleAutocomplete.enhanceSelectElement({
       selectElement: document.querySelector('#document_type')
     })
-    accessibleAutocomplete.enhanceSelectElement({
-      selectElement: document.querySelector('#organisations')
-    })
+
+    // set up multi select for organisations
+    const $mulitSelectModule = document.querySelector('[data-module="multi-select"]')
+    const mulitSelectModule = new dptp.MultiSelect($mulitSelectModule).init()
   </script>
 {% endblock pageScripts %}
